<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ads"
            android:icon="@drawable/ic_shopping_basket_black_18dp"
            android:title="@string/nav_ads" />
    </group>

    <group android:id="@+id/nav_logged">
        <item android:title="@string/nav_my_ads">
            <menu>
                <item
                    android:id="@+id/nav_favourites"
                    android:icon="@drawable/ic_favorite_black_18dp"
                    android:title="@string/nav_favourites" />
                <item
                    android:id="@+id/nav_new"
                    android:icon="@drawable/ic_add_black_18dp"
                    android:title="@string/nav_new" />
                <item
                    android:id="@+id/nav_active"
                    android:icon="@drawable/ic_check_black_18dp"
                    android:title="@string/nav_active" />
                <item
                    android:id="@+id/nav_inactive"
                    android:icon="@drawable/ic_close_black_18dp"
                    android:title="@string/nav_inactive" />
            </menu>
        </item>

        <item android:title="@string/nav_account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account_box_black_18dp"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_power_settings_new_black_18dp"
                    android:title="@string/nav_logout" />
            </menu>
        </item>
    </group>

    <group android:id="@+id/nav_not_logged">
        <item android:title="@string/nav_account">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_input_black_18dp"
                    android:title="@string/nav_login" />
            </menu>
        </item>
    </group>

</menu>
